fix spacing of header elements

--- a/index-styles.css
+++ b/index-styles.css
@@ -7,27 +7,29 @@
 body {
     font: bold 20px Roboto, arial, helvetica;
 }
-.main {
+/* .main {
     
-}
+} */
 
 .header-links {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    
+    /* justify-content: space-between; */
     color: #F2CC8F;
+    
     list-style-type: none;
     margin: 0 3vw;
-    font: bold 14px Roboto, arial, helvetica;
+    font: bold 20px Roboto, arial, helvetica;
 }
 
 .home-logo {
     display: flex;
     justify-self: flex-start;
-    padding: 0 0.2rem;
-    border: #F2CC8F;
-    border-style: solid;
-    border-width: 0.2rem;
+    margin: 0 1rem;
+    /* border: #F2CC8F; */
+    /* border-style: solid;
+    border-width: 0.2rem; */
     font: bold 24px Roboto, arial, helvetica;
 
 }
@@ -36,8 +38,9 @@ header {
     background-color: #81B29A;
     height: 3em;
     display: flex;
-    align-items: ;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    /* flex-direction: column; */
     
 }
 
@@ -54,4 +57,8 @@ section {
 
 footer {
     font: bold 20px Roboto, arial, helvetica;
+}
+
+li {
+    margin: 0 1rem
 }
